# information-retrieval-backend-rs

./: Cargo.toml
src/: main.rs
src/router/: mod.rs  ping.rs  query.rs
src/search/: engine.rs  mod.rs  utils.rs
