[package]
name = "information-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
jieba-rs = "0.6.7"
lazy_static = "1.4.0"
ndarray = "0.15.6"
regex = "1.8.4"
rust-stemmers = "1.2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
